Initial commit: JobApplication Tracker backend and frontend setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
 # Python
+venv/
 __pycache__/
 *.pyc
-.env
 db.sqlite3
 
 # Django
-/staticfiles/
-media/
+.env
 
 # Node
 node_modules/
 dist/
+
+# VS Code
+.vscode/
 
 # OS
 .DS_Store
